# tf-ricpad

./: CMakeLists.txt  README.md
ricpad/: CMakeLists.txt
ricpad/include/solver/: differentiate.hpp
src/: main.cpp  main_old.cpp  tf.cpp
src/include/: tf.hpp
src/include/solver/: differentiate_old.hpp  solver.hpp  solver_old.hpp
